# Arduino-CMake-NG

./: .editorconfig  .gitignore  .markdownlint.json  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  appveyor.yml
.travis-arch-build/: Dockerfile  preferences.txt  (+1 more)
examples/: CMakeLists.txt
examples/3rd-party-library/: 3rd_party.cpp  CMakeLists.txt  GFXTest.cpp  InterruptTest.cpp  LiquidCrystalTest.cpp  NeoPixelTest.cpp  test.cpp  testGFX.cpp
examples/3rd-party-library/include/: GFXTest.h  InterruptTest.hpp  LiquidCrystalTest.hpp  NeoPixelTest.hpp
examples/3rd-party-library/libraries/Adafruit_NeoPixel/: Adafruit_NeoPixel.cpp
examples/3rd-party-library/libraries/EnableInterrupt/: Interrupt Timing.odt
examples/3rd-party-library/libraries/Skywriter/: keywords.txt  skywriter.cpp  skywriter.h
examples/ArduinoLibrary/: CMakeLists.txt
examples/Blink/: CMakeLists.txt
examples/arduino-library/: CMakeLists.txt  test.cpp
examples/blink/: CMakeLists.txt  blink.cpp
examples/blink-example/: CMakeLists.txt
examples/custom-library/: CMakeLists.txt  test.cpp
examples/custom-library/Adafruit_NeoPixel/: Adafruit_NeoPixel.h
examples/header-only-library/: CMakeLists.txt  headerOnlyTest.cpp
examples/header-only-library/libraries/test-lib/: library.properties
examples/hello-world/: CMakeLists.txt
examples/misc/: CMakeLists.txt
examples/misc/libraries/: CMakeLists.txt
examples/platform-library/: CMakeLists.txt  platformLibrary.cpp
examples/servo-knob-example/: CMakeLists.txt
examples/sketch/: CMakeLists.txt  sketch1.ino  sketch2.pde
(+154 files in other folders)
