cmake_minimum_required(VERSION 3.8.2)

project(Examples LANGUAGES C CXX ASM)

add_subdirectory(hello-world)
add_subdirectory(arduino-library)
add_subdirectory(3rd-party-library)
add_subdirectory(header-only-library)
add_subdirectory(blink-example)
add_subdirectory(servo-knob-example)
add_subdirectory(sketch)
add_subdirectory(misc)
